# xMustard

./: .gitignore  AGENTS.md  Makefile  README.md
.openhands/microagents/: repo.md
api-go/: go.mod  go.sum
backend/: pyproject.toml  setup.cfg
backend/app/: __init__.py  cli.py  main.py  models.py  postgres.py  runtimes.py  scanners.py  semantic.py  service.py  store.py  terminal.py
backend/data/: settings.json  workspaces.json
backend/data/workspaces/co-titan-0a54108278/: activity.jsonl  issue_overrides.json  snapshot.json
backend/data/workspaces/co-titan-0a54108278/runs/: run_32370bf2aaf8.json  run_40221c2d0946.json  run_40221c2d0946.out.json  run_5d272d8663dd.json  run_66c68561e0f1.json  run_67ae394f1c46.json  run_78afd02e4014.json  run_94383c0c8bb6.json  run_9b4f78ace92d.json  run_a19e15e8fd2d.json  run_b1264cb8286c.json  run_b1264cb8286c.out.json  run_b30bc80f20a7.json  run_b874350b2178.json  run_cf0f12a1f443.json  run_ea4bf722c9b2.json  run_f3d9bfe1d3da.json  run_f3f97e5aca1c.json  run_f3f97e5aca1c.out.json
backend/data/workspaces/repo-2d5d3dd8af/: activity.jsonl  fix_records.json  issue_overrides.json  snapshot.json  tracker_issues.json
backend/data/workspaces/repo-2d5d3dd8af/runs/: run_smoke_fix.json
backend/data/workspaces/repo-30ecdc5685/: activity.jsonl  fix_records.json  issue_overrides.json  snapshot.json  tracker_issues.json
backend/data/workspaces/repo-30ecdc5685/runs/: run_smoke_fix.json
backend/data/workspaces/repo-4d73ffdc46/: activity.jsonl  fix_records.json  issue_overrides.json  snapshot.json  tracker_issues.json
backend/data/workspaces/repo-cb6493e598/: activity.jsonl  snapshot.json  tracker_issues.json
backend/data/workspaces/repo-d56ef7ff29/: activity.jsonl  fix_records.json  issue_overrides.json  snapshot.json  tracker_issues.json
backend/data/workspaces/repo-d56ef7ff29/runs/: run_smoke_fix.json
backend/sql/: 001_repo_cockpit_postgres.sql
backend/tests/: test_activity_ledger.py  test_activity_overview.py  test_api_route_inventory.py  test_cli.py  test_postgres.py  test_rust_coverage_migration.py  test_rust_verification_migration.py  test_scanners.py  test_tracker_service.py  test_vulnerability_api.py
docs/: ARCHITECTURE.md  CHANGELOG.md  FEATURES.md  FRONTIER.md  GITNEXUS_EXTRACTION_MAP.md  MIGRATION_RUST_GO.md  PLANNING.md  REPO_COCKPIT_TOOL_ARCHITECTURE.md  RESEARCH_FINDINGS.md  RESEARCH_MATRIX.md
docs/plans/: 2026-04-17-vulnerability-ingestion-lane.md  2026-04-18-no-python-control-plane-adr.md  (+2 more)
frontend/: package-lock.json  package.json  vite.config.ts
rust-core/: Cargo.toml
rust-core/src/: contracts.rs  lib.rs  repomap.rs  scanner.rs  verification.rs
(+96 files in other folders)
