[project]
name = "xmustard-backend"
version = "0.1.0"
description = "xMustard - AI-powered bug operations system for local codebases"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn>=0.34,<0.35",
  "pydantic>=2.10,<3",
  "typer>=0.12,<0.13",
  "PyYAML>=6,<7",
]

[project.scripts]
xmustard = "app.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
