[project]
name = "xmustard-backend"
version = "0.1.0"
description = "xMustard - AI-powered bug operations system for local codebases"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.136,<0.137",
  "uvicorn>=0.46,<0.47",
  "pydantic>=2.13,<3",
  "typer>=0.25,<0.26",
  "click>=8.3,<8.4",
  "PyYAML>=6,<7",
  "psycopg[binary]>=3.3,<4",
]

[project.optional-dependencies]
semantic = [
  "tree-sitter-language-pack>=1.6,<2; python_version >= '3.10'",
]

[project.scripts]
xmustard = "app.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
