[metadata]
name = co-titan-bug-tracker-backend
version = 0.1.0
description = Standalone bug tracker control plane for local codebases

[options]
packages = find:
install_requires =
    fastapi>=0.115,<0.116
    uvicorn>=0.34,<0.35
    pydantic>=2.10,<3
    typer>=0.12,<0.13

[options.packages.find]
include =
    app*

[options.entry_points]
console_scripts =
    co-titan-bug-tracker = app.cli:app
