[package]
name = "xmustard-core"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "xmustard_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
regex = "1.12"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"
